--- a/BrotBoxEngine/BrotBoxEngine.vcxproj
+++ b/BrotBoxEngine/BrotBoxEngine.vcxproj
@@ -152,6 +152,8 @@
     <ClInclude Include="StackAllocator.h" />
     <ClInclude Include="StackAllocatorTest.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="String.h" />
+    <ClInclude Include="StringTest.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="UtilMath.h" />
     <ClInclude Include="UtilTest.h" />
