--- a/BrotBoxEngine/BrotBoxEngine.vcxproj
+++ b/BrotBoxEngine/BrotBoxEngine.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="Array.h" />
     <ClInclude Include="DataType.h" />
     <ClInclude Include="DynamicArray.h" />
+    <ClInclude Include="List.h" />
     <ClInclude Include="OtherTest.h" />
     <ClInclude Include="PoolAllocator.h" />
     <ClInclude Include="PoolAllocatorTest.h" />
