Started moving std:: out of engine code

--- a/BrotBoxEngine/BrotBoxEngine.vcxproj.filters
+++ b/BrotBoxEngine/BrotBoxEngine.vcxproj.filters
@@ -93,6 +93,12 @@
     <ClInclude Include="ListTest.h">
       <Filter>Tests\DataStructures</Filter>
     </ClInclude>
+    <ClInclude Include="STLCapsule.h">
+      <Filter>Header Files\Util</Filter>
+    </ClInclude>
+    <ClInclude Include="STLAllocator.h">
+      <Filter>Header Files\MemoryManagement</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
