--- a/BrotBoxEngine/BrotBoxEngine.vcxproj
+++ b/BrotBoxEngine/BrotBoxEngine.vcxproj
@@ -156,6 +156,8 @@
     <ClInclude Include="StackAllocator.h" />
     <ClInclude Include="StackAllocatorTest.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="STLAllocator.h" />
+    <ClInclude Include="STLCapsule.h" />
     <ClInclude Include="String.h" />
     <ClInclude Include="StringTest.h" />
     <ClInclude Include="targetver.h" />
