--- a/BrotBoxEngine/BrotBoxEngine.vcxproj
+++ b/BrotBoxEngine/BrotBoxEngine.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="STLCapsule.h" />
     <ClInclude Include="StopWatch.h" />
     <ClInclude Include="String.h" />
+    <ClInclude Include="StringPerformanceTime.h" />
     <ClInclude Include="StringTest.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="UtilMath.h" />
