--- a/BrotBoxEngine/BrotBoxEngine.vcxproj
+++ b/BrotBoxEngine/BrotBoxEngine.vcxproj
@@ -202,11 +202,13 @@
     <ClInclude Include="UtilMath.h" />
     <ClInclude Include="UtilTest.h" />
     <ClInclude Include="UtilDebug.h" />
+    <ClInclude Include="VulkanDevice.h" />
     <ClInclude Include="VulkanHelper.h" />
     <ClInclude Include="VulkanInstance.h" />
     <ClInclude Include="VulkanManager.h" />
     <ClInclude Include="VulkanPhysicalDevices.h" />
     <ClInclude Include="VulkanSurface.h" />
+    <ClInclude Include="VulkanSwapchain.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
