--- a/BrotBoxEngine/BrotBoxEngine.vcxproj
+++ b/BrotBoxEngine/BrotBoxEngine.vcxproj
@@ -182,6 +182,9 @@
     <ClInclude Include="GeneralPurposeAllocator.h" />
     <ClInclude Include="GeneralPurposeAllocatorPerformanceTime.h" />
     <ClInclude Include="GeneralPurposeAllocatorTest.h" />
+    <ClInclude Include="Hash.h" />
+    <ClInclude Include="HashMap.h" />
+    <ClInclude Include="HashMapTest.h" />
     <ClInclude Include="List.h" />
     <ClInclude Include="ListTest.h" />
     <ClInclude Include="OtherTest.h" />
