--- a/BrotBoxEngine/BrotBoxEngine.vcxproj
+++ b/BrotBoxEngine/BrotBoxEngine.vcxproj
@@ -182,6 +182,8 @@
     <ClInclude Include="CPUWatch.h" />
     <ClInclude Include="DataType.h" />
     <ClInclude Include="DefaultDestroyer.h" />
+    <ClInclude Include="DefragmentationAllocator.h" />
+    <ClInclude Include="DefragmentationAllocatorTest.h" />
     <ClInclude Include="DynamicArray.h" />
     <ClInclude Include="GeneralPurposeAllocator.h" />
     <ClInclude Include="GeneralPurposeAllocatorPerformanceTime.h" />
@@ -211,6 +213,7 @@
     <ClInclude Include="StringPerformanceTime.h" />
     <ClInclude Include="StringTest.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Unconstructed.h" />
     <ClInclude Include="UniquePointer.h" />
     <ClInclude Include="UniquePointerTest.h" />
     <ClInclude Include="UtilMath.h" />
